--- a/index.ipynb
+++ b/index.ipynb
@@ -2437,7 +2437,7 @@
    "outputs": [],
    "source": [
     "def multivariable_output_at(list_of_terms, x_value, y_value):\n",
-    "    return sum([term[0]*(x_value**term[1])*(y_value**)])"
+    "    return sum([term[0]*(x_value**term[1])*(y_value**term[2]) for te])"
    ]
   },
   {
