Automatically backed up by Learn

--- a/index.ipynb
+++ b/index.ipynb
@@ -2623,7 +2623,7 @@
    "outputs": [],
    "source": [
     "def df_dx(list_of_terms):\n",
-    "    return []"
+    "    return [term_df_dx(t)]"
    ]
   },
   {
